--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
       <div class="col-md-4">
         <div class="card">
           <div class="card-img-container">
-            <img src="https://www.apple.com/newsroom/images/product/watch/standard/Apple_watch-experience-for-entire-family-hero_09152020_big.jpg.large.jpg" class="card-img-top img1" alt="Product Image 1">
-            <img src="https://www.apple.com/newsroom/images/2023/09/apple-introduces-the-advanced-new-apple-watch-series-9/article/Apple-Watch-S9-hero-230912_Full-Bleed-Image.jpg.large.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
+            <img src="https://m.media-amazon.com/images/I/51nhDFywuyL._MCnd_AC_.jpg" class="card-img-top img1" alt="Product Image 1">
+            <img src="https://m.media-amazon.com/images/I/71ymt2HSJXL._AC_SX679_.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
           </div>
           <div class="card-body">
-            <h5 class="card-title">APPLE WATCH</h5>
-            <p class="card-text">Apple Watch SE (2nd Gen) [GPS 40mm] Smartwatch with Starlight Aluminum Case with Starlight Sport Band S/M. Fitness & Sleep Tracker, Crash Detection, Heart Rate Monitor</p>
-            <button class="btn btn-primary" onclick="toggleImage(this)">View Image</button>
-            <a href="#" class="btn btn-success">Buy Now</a>
+            <h5 class="card-title">Portable Bluetooth</h5>
+            <p class="card-text">Portable Bluetooth Karaoke Speaker with 2 Wireless Microphones & LED Lights for Kids Birthday Parties</p>
+            <button class="btn btn-primary" onclick="toggleImage(this)">Image One</button>
+            <a href="https://amzn.to/3BMSQef" class="btn btn-success">Buy Now</a>
           </div>
         </div>
       </div>
@@ -83,14 +83,14 @@
       <div class="col-md-4">
         <div class="card">
           <div class="card-img-container">
-            <img src="https://www.apple.com/newsroom/images/2023/09/apple-introduces-the-advanced-new-apple-watch-series-9/article/Apple-Watch-S9-hero-230912_Full-Bleed-Image.jpg.large.jpg" class="card-img-top img1" alt="Product Image 1">
-            <img src="https://www.apple.com/newsroom/images/product/watch/lifestyle/Apple_announces-watch-se_09152020_big.jpg.large.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
+            <img src="https://m.media-amazon.com/images/I/815HZLkZfgL._AC_SX679_.jpg" class="card-img-top img1" alt="Product Image 1">
+            <img src="https://m.media-amazon.com/images/I/61KAoQOvRXL._AC_SX679_.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
           </div>
           <div class="card-body">
-            <h5 class="card-title">APPLE WATCH</h5>
-            <p class="card-text">Apple Watch SE (2nd Gen) [GPS 40mm] Smartwatch with Starlight Aluminum Case with Starlight Sport Band S/M. Fitness & Sleep Tracker, Crash Detection, Heart Rate Monitor</p>
-            <button class="btn btn-primary" onclick="toggleImage(this)">View Image</button>
-            <a href="#" class="btn btn-success">Buy Now</a>
+            <h5 class="card-title">Wireless Microphone</h5>
+            <p class="card-text">Wireless Microphone for iPhone, iPad, Android, Lavalier Microphone for Video Recording - 2 Pack iPhone Mic Crystal Clear Recording with USB-C for Podcast Microphone, ASMR, TikTok</p>
+            <button class="btn btn-primary" onclick="toggleImage(this)">Image One</button>
+            <a href="https://amzn.to/3BNGd2q" class="btn btn-success">Buy Now</a>
           </div>
         </div>
       </div>
@@ -99,14 +99,14 @@
       <div class="col-md-4">
         <div class="card">
           <div class="card-img-container">
-            <img src="https://www.apple.com/newsroom/images/2023/09/apple-introduces-the-advanced-new-apple-watch-series-9/article/Apple-Watch-S9-hero-230912_Full-Bleed-Image.jpg.large.jpg" class="card-img-top img1" alt="Product Image 1">
-            <img src="https://www.apple.com/newsroom/images/product/watch/lifestyle/Apple_announces-watch-se_09152020_big.jpg.large.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
+            <img src="https://m.media-amazon.com/images/I/712E+uR1yGL._AC_SY300_SX300_.jpg" class="card-img-top img1" alt="Product Image 1">
+            <img src="https://m.media-amazon.com/images/I/71pQX1sCcsL._AC_SX679_.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
           </div>
           <div class="card-body">
-            <h5 class="card-title">APPLE WATCH</h5>
-            <p class="card-text">Apple Watch SE (2nd Gen) [GPS 40mm] Smartwatch with Starlight Aluminum Case with Starlight Sport Band S/M. Fitness & Sleep Tracker, Crash Detection, Heart Rate Monitor</p>
-            <button class="btn btn-primary" onclick="toggleImage(this)">View Image</button>
-            <a href="#" class="btn btn-success">Buy Now</a>
+            <h5 class="card-title">Hagibis 21 inch Ring Light</h5>
+            <p class="card-text">Hagibis 21 inch Ring Light with Stand Outer 55W 5600k Dimmable LED Light, Tripod Stand,and Phone Holder，Remote Controller,Carrying Bag ，CRI 97+ 2540lux, for Streaming Home Office Zoom Call Lighting</p>
+            <button class="btn btn-primary" onclick="toggleImage(this)">Image One</button>
+            <a href="https://amzn.to/3BZbejS" class="btn btn-success">Buy Now</a>
           </div>
         </div>
       </div>
