--- a/products.html
+++ b/products.html
@@ -35,18 +35,22 @@
   <!-- Product Section one -->
   <div class="container mt-5">
     <div class="product">
-      <img src="https://m.media-amazon.com/images/I/81soN3bwVFL._AC_SX679_.jpg" alt="Product Image" class="img-fluid">
-      <h2 class="product-name mt-3">LG UltraGear</h2>
+      <img src="https://m.media-amazon.com/images/I/61s0g2n2C-L._SX679_.jpg" alt="Product Image" class="img-fluid">
+      <h2 class="product-name mt-3"> Body Thigh Butt Firming Cream</h2>
       <p class="product-description">
-        LG UltraGear QHD 34-Inch Curved Gaming Monitor 34GP63A-B, VA with HDR 10 Compatibility and AMD FreeSync Premium, 160Hz, Black
-        <span class="more-text d-none"> Great for gaming, this ultra-wide QHD (3440 x 1440, 21:9 aspect ratio) curved monitor immerses you in the action and increases your field of view, allowing you to see more on-screen. Specific uses for product - Gaming
-        A high native 160Hz refresh rate with 1-millisecond Motion Blur Reduction (MBR) keeps you firmly in the action while reducing blur and ghosting, helping you to respond to opponents quickly. With HDR10 support and color performance with 99% coverage of the sRGB spectrum, you'll see the game as the developers intend, with accurate and vivid color. AMD FreeSync Premium manages refresh rate, reducing screen tearing, flicker, and stuttering for an effortlessly smooth gaming experience with supported video cards such as the AMD Radeon series. Dynamic Action Sync helps reduce input lag to help you respond to on-screen action quickly. Black Stabilizer dynamically brightens dark scenes to help you find enemies in the dark. Enhance your accuracy in firefights with the Crosshair feature.</span>
+        Body Thigh Butt Firming Cream, Moisturizing Body Skin Repair- Fast Absorbing, Smoothening Butt Cream for Women, 80ml (#1 Vanilla Pistachio)
+        <span class="more-text d-none"> 【Three scents】Choose the scent according to your preferences, including vanilla, fruit flower, caramel coconut and other scents. Each scent is fresh and natural, allowing you to exude a sweet scent for a long time after use.
+          🥑【How to use】To achieve better absorption effect, you can gently pat when applying the buttocks cream to help the skin absorb. Replenish moisture and nutrients to the skin, making it more delicate and smooth.
+          🌷【Buttocks lifting effect】Not only can it make the buttocks skin firmer, but it can also provide long-lasting moisturizing to the skin. Shape a charming buttocks line and make the skin elastic and smooth!
+          🌴【Applicable skin】Applicable to buttocks, thighs, waist, shoulders and all parts of the body. The texture is soft, not greasy or sticky. After applying it to the body, it can be quickly absorbed by the skin.
+          💐【Best gift】The stylish and atmospheric bottle design, exquisite and compact appearance, and high-end touch make it an excellent gift for mothers, sisters, and friends.
+        </span>
       </p>
 
       <!-- Buttons -->
       <div class="button-group">
         <button class="btn btn-primary read-more">Read More</button>
-        <a href="#" class="btn btn-success buy-now" target="_blank">Buy Now</a>
+        <a href="https://amzn.to/3NCHs73" class="btn btn-success buy-now" target="_blank">Buy Now</a>
       </div>
     </div>
   </div>
@@ -54,17 +58,20 @@
   <!-- Product Section two -->
   <div class="container mt-5">
     <div class="product">
-      <img src="https://m.media-amazon.com/images/I/61INtCQzv2L._AC_SX679_.jpg" alt="Product Image" class="img-fluid">
-      <h2 class="product-name mt-3">Skytech Gaming Nebula</h2>
+      <img src="https://m.media-amazon.com/images/I/61rkLklRUNL._AC_SY879_.jpg" alt="Product Image" class="img-fluid">
+      <h2 class="product-name mt-3"> Saloogoe Lounge Sets for Women </h2>
       <p class="product-description">
-        Gaming PC Desktop – Intel Core i5 13400F 2.5 GHz, NVIDIA RTX 4060, 1TB NVME SSD, 16GB DDR4 RAM 3200, 600W Gold PSU, 11AC Wi-Fi, Windows 11 Home 64-bit, Black
-        <span class="more-text d-none">INTEL Core i5 13400F 2.5GHz (4.6GHz Max Boost) CPU Processor | 1TB NVME SSD – Up to 30x Faster Than Traditional HDD. NVIDIA Geforce RTX 4060 8GB GDDR6X Graphics Card (Brand may vary) | 16GB DDR4 RAM 3200 Gaming Memory with Heat Spreader | Windows 11 Home 64-bit. 802.11 AC | No Bloatware | Graphic output options include 1 x HDMI, and 1 x Display Port Guaranteed, Additional Ports may vary | USB Ports Including 2.0, 3.0, and 3.2 Gen1 Ports | HD Audio and Mic | Free Gaming Keyboard and Mouse. 4 RGB Fans for Maximum Air Flow | Skytech Nebula Black Edition with Front Mesh | 1 Year Warranty on Parts and Labor | Lifetime Free Technical Support | Assembled in the USA.</span>
+        Saloogoe Lounge Sets for Women 2 Piece Sweatsuits Travel Outfits Fall Crewneck Sweatshirts Wide Leg Sweatpants Matching
+        <span class="more-text d-none">✦Design: Two piece sets for women, crewneck sweatshirts and high waist drawstring wide leg sweatpants with two pockets. Relaxed fit and casual style.
+          ✦Occasion: The 2 piece outfits is stylish and versatile, can be dressed up or down. Suitable for lounging around the house/ running errands/ travel/ work/ gym/ shopping/ street/ party/ workout and family outfits.
+          ✦Clothing Care: Machine or Hand Wash with Cold Water/Hang or Line Dry/No Bleach/No Dry Clean/Warm iron if needed.
+          ✦Please Refer to the Saloogoe Size Chart before Ordering. Anyother questions, please contact us anytime!</span>
       </p>
 
       <!-- Buttons -->
       <div class="button-group">
         <button class="btn btn-primary read-more">Read More</button>
-        <a href="#" class="btn btn-success buy-now" target="_blank">Buy Now</a>
+        <a href="https://amzn.to/3A22PvC" class="btn btn-success buy-now" target="_blank">Buy Now</a>
       </div>
     </div>
   </div>
@@ -72,17 +79,20 @@
   <!-- Product Section three -->
   <div class="container mt-5">
     <div class="product">
-      <img src="https://m.media-amazon.com/images/I/6108C2DZE9L.__AC_SX300_SY300_QL70_FMwebp_.jpg" alt="Product Image" class="img-fluid">
-      <h2 class="product-name mt-3">iPHONE 16</h2>
+      <img src="https://m.media-amazon.com/images/I/615STjWijhL._AC_SX695_.jpg" alt="Product Image" class="img-fluid">
+      <h2 class="product-name mt-3"> Glitter Sneakers </h2>
       <p class="product-description">
-        ProMax 5G Unlocked Smartphone, 8GB+256GB with 128GB Memory Card cell phone Android 13, 6.8"HD Screen, 7000mAh, 48MP+108MP Dual Camera/Fingerprint Lock/Face (Blue Titanium)
-        <span class="more-text d-none">Snapdragon 8 Gen2 CPU + 128GB Expandable TF Card】unlocked Android cell phone powerful by Snapdragon 8CPU + 5G Octa-Core Processor, Up to 8GB RAM and 256GB ROM. Supports expandable storage up to 128GB. Android 13 on board for a smoother experience.</span>
+        LUCKY STEP Fashion Star Glitter Sneakers | Sparkly Bling Shiny Bedazzled Wedding Bridal Shoes for Women
+        <span class="more-text d-none">【The Materials】LUCKY STEP glitter sneakers feature a upper with glitter and cute star pattern and non-slip TPR outsole .
+          【Sparkly Design】The glitter sneakers will add that extra sparkle to your outfit , making you look more stylish.
+          【Suitable Occasion】Fashion shinny star shoes is perfect for special occasions like christmas,weddings,festival events,and other casual occasion.
+          【After-sales Service】:if you have any questions when received goods , please contact us,will deal with it in first time.</span>
       </p>
 
       <!-- Buttons -->
       <div class="button-group">
         <button class="btn btn-primary read-more">Read More</button>
-        <a href="#" class="btn btn-success buy-now" target="_blank">Buy Now</a>
+        <a href="https://amzn.to/4h7at8x" class="btn btn-success buy-now" target="_blank">Buy Now</a>
       </div>
     </div>
   </div>
