--- a/products_review.html
+++ b/products_review.html
@@ -42,60 +42,91 @@
 <div class="container my-4">
     <div class="product-section">
         <div class="col-md-6">
-            <img src="https://cdn.mos.cms.futurecdn.net/yDn3ZSXu9eSBxmXQDZ4PCF-1200-80.jpg" alt="Product 1" class="img-fluid">
+            <img src="https://m.media-amazon.com/images/I/610drswoFiL._AC_SX679_.jpg" alt="Product 1" class="img-fluid">
         </div>
         <div class="col-md-6 d-flex flex-column align-items-center">
-            <h5 class="product-title text-center mb-3">Product 1 Title</h5>
-            <p>This is an introductory summary of Product 1. It highlights key features briefly to attract the user’s attention.</p>
+            <h5 class="product-title text-center mb-3">Hem-Control</h5>
+            <p>Hem-Control - Fast Effective Hemorrhoid Treatment Supplement - Powerful Formula to Promote Symptom Relief, Shrinking of Hemorrhoids, Ease Discomfort - 90 Vegan Capsules - Made in USA</p>
 
-            <!-- Product Details Section -->
+            <!-- Product Details Section one-->
             <div id="details1" class="product-details mt-3" style="display: none;">
-                <p>Here are the full details about Product 1. You can include specifications, features, and additional information here.</p>
+                <p>If you're struggling with the discomfort of hemorrhoids and looking for a natural solution, Hem-Control may be exactly what you need. This supplement combines a powerful formula designed to promote relief, shrink hemorrhoids, and ease pain and itching – all while being 100% vegan and manufactured in the USA.</p>
+                <h5>Fast Symptom Relief:</h4>
+                    <p>Many users report that Hem-Control starts to alleviate symptoms within days, reducing itching, swelling, and pain caused by both internal and external hemorrhoids.
+                    </p>
+                    <h5>Promotes Shrinking of Hemorrhoids:</h5>
+                    <p>The ingredients work from the inside to shrink hemorrhoidal tissues, reducing inflammation and preventing flare-ups. This makes it a great option for both acute relief and long-term prevention.</p>
+                    <h5>Comfort and Discomfort Relief:</h5>
+                    <p>It’s formulated to soothe the burning, itching, and irritation associated with hemorrhoids. Taking it regularly helps users feel more comfortable throughout the day and night.</p>
+                    <h5>Vegan-Friendly and USA-Made:</h5>
+                    <p>Each bottle contains 90 vegan capsules, ensuring this supplement is safe for those following a plant-based lifestyle. Plus, knowing it's manufactured in the USA gives consumers peace of mind regarding quality and safety standards.</p>
+
             </div>
 
             <div class="btn-group mt-2" role="group">
                 <button class="btn btn-primary" onclick="toggleDetails('details1')">Read More</button>
-                <a href="https://example.com/buy-product1" class="btn btn-success">Buy Now</a>
+                <a href="https://amzn.to/4dTWcJN" class="btn btn-success">Buy Now</a>
             </div>
         </div>
     </div>
     <hr class="product-hr">
+     <!-- Product Details Section two-->
 
     <div class="product-section">
         <div class="col-md-6">
-            <img src="https://cdn.mos.cms.futurecdn.net/yDn3ZSXu9eSBxmXQDZ4PCF-1200-80.jpg" alt="Product 2" class="img-fluid">
+            <img src="https://m.media-amazon.com/images/I/812sB54U9FL._AC_SX679_.jpg" alt="Product 2" class="img-fluid">
         </div>
         <div class="col-md-6 d-flex flex-column align-items-center">
-            <h5 class="product-title text-center mb-3">Product 2 Title</h5>
-            <p>This is an introductory summary of Product 2. It briefly mentions key benefits to spark interest.</p>
+            <h5 class="product-title text-center mb-3">Himalaya Organic Arjuna</h5>
+            <p>Himalaya Organic Arjuna Herbal Supplement, Cardiovascular Support, Blood Pressure Maintenance, Heart Health, USDA Certified Organic, Non-GMO, Vegan, 700 mg, 60 Plant-Based Caplets, 60 Day Supply</p>
 
             <div id="details2" class="product-details mt-3" style="display: none;">
-                <p>Here are the full details about Product 2. You can include specifications, features, and additional information here.</p>
+                <p>The Himalaya Organic Arjuna Herbal Supplement is crafted to support cardiovascular health and maintain balanced blood pressure levels. Arjuna (Terminalia arjuna) has been an integral part of traditional Ayurvedic medicine, known for its heart-strengthening properties. This product is USDA-certified organic, Non-GMO, vegan, and free from artificial additives, making it suitable for individuals seeking plant-based, natural health solutions.</p>
+                <h5>Cardiovascular Support:</h5>
+                <p>Arjuna bark has traditionally been used to enhance heart muscle function and promote healthy circulation, supporting optimal cardiovascular performance.</p>
+                <h5>Blood Pressure Maintenance:</h5>
+                <p>Regular consumption helps maintain healthy blood pressure levels, which is essential for overall heart health and prevention of hypertension-related complications.</p>
+                <h5>Plant-Based & Organic:</h5>
+                <p>Being USDA-certified organic and vegan ensures the supplement is free from pesticides, chemicals, and animal products. This makes it appealing to health-conscious consumers who prefer clean ingredients.</p>
+                <h5>Non-GMO & No Additives:</h5>
+                <p>The product is Non-GMO and does not contain artificial colors, flavors, or preservatives, giving you peace of mind about what you are consuming.
+
+                </p>
             </div>
 
             <div class="btn-group mt-2" role="group">
                 <button class="btn btn-primary" onclick="toggleDetails('details2')">Read More</button>
-                <a href="https://example.com/buy-product2" class="btn btn-success">Buy Now</a>
+                <a href="https://amzn.to/3UgjGl4" class="btn btn-success">Buy Now</a>
             </div>
         </div>
     </div>
     <hr class="product-hr">
 
+     <!-- Product Details Section three-->
+
     <div class="product-section">
         <div class="col-md-6">
-            <img src="https://cdn.mos.cms.futurecdn.net/yDn3ZSXu9eSBxmXQDZ4PCF-1200-80.jpg" alt="Product 3" class="img-fluid">
+            <img src="https://m.media-amazon.com/images/I/6135DLU1qkL._SX679_.jpg" alt="Product 3" class="img-fluid">
         </div>
         <div class="col-md-6 d-flex flex-column align-items-center">
-            <h5 class="product-title text-center mb-3">Product 3 Title</h5>
-            <p>This is an introductory summary of Product 3. It provides a sneak peek into what the product offers.</p>
+            <h5 class="product-title text-center mb-3">Pheromones Perfumes</h5>
+            <p>Premium Unisex Pheromone Cologne - Pheromones Perfumes for Women and Men - Pheromone Perfume Oil With Light, Enduring, Classic Scent - 0.34oz (10mL)</p>
 
             <div id="details3" class="product-details mt-3" style="display: none;">
-                <p>Here are the full details about Product 3. You can include specifications, features, and additional information here.</p>
+                <p>If you're looking for a cologne that does more than just smell nice, the Premium Unisex Pheromone Cologne is a must-try. This 10mL bottle packs a subtle yet captivating scent that works well for both men and women, making it a versatile addition to anyone’s collection. Here's my detailed take on it.</p>
+                <h5>Scent and Longevity</h5>
+                <p>The fragrance offers a light, classic scent that isn’t overpowering. It strikes a perfect balance between sophistication and subtlety, making it ideal for everyday use or special occasions. I wore it throughout the day, and the fragrance stayed noticeable without fading or needing reapplication, proving its endurance.</p>
+                <h5>Pheromone Power</h5>
+                <p>What makes this cologne unique is its infusion of pheromones. While it’s not a magic potion, I noticed increased positive interactions, and it gave me a confidence boost in social settings. The fact that it’s unisex means it works equally well whether you want to feel more attractive yourself or subtly influence the mood around you.</p>
+                <h5>Application</h5>
+                <p>The perfume oil is smooth and easy to apply with just a small dab on pulse points like the neck or wrists. Since it comes in a compact 0.34oz bottle, it’s travel-friendly, which is a plus for those who like to carry their fragrances on the go.</p>
+                <h5>Value for Money</h5>
+                <p>While some might find the bottle small at 10mL, a little goes a long way. Given its longevity and the added pheromone benefits, the price feels justified.</p>
             </div>
 
             <div class="btn-group mt-2" role="group">
                 <button class="btn btn-primary" onclick="toggleDetails('details3')">Read More</button>
-                <a href="https://example.com/buy-product3" class="btn btn-success">Buy Now</a>
+                <a href="https://amzn.to/3A7HTmR" class="btn btn-success">Buy Now</a>
             </div>
         </div>
     </div>
