--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,16 @@
   <link rel="stylesheet" href="contact.css">
   <link rel="icon" type="image/png" sizes="64x64" href="./img/tlogo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16746031528"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16746031528');
+</script>
 </head>
 <body>
   <div class="contact-container">
