--- a/products_review.html
+++ b/products_review.html
@@ -148,10 +148,26 @@
     <i class="fa-solid fa-arrow-up"></i>
   </button>
 
-<!-- Footer -->
-<footer class="bg-dark text-light text-center p-3 mt-5">
+  <!-- Footer -->
+<footer style="background-color: lightblue; color: white;" class="text-center p-3 mt-5">
     <p>© 2024 DM Technologies. All Rights Reserved.</p>
+
+    <div class="social-icons">
+        <a href="https://www.facebook.com" target="_blank" class="social-icon">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com" target="_blank" class="social-icon">
+          <i class="fab fa-instagram"></i>
+        </a>
+        
+      </div>
 </footer>
+
+
+
+  
+
+
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
