--- a/index.html
+++ b/index.html
@@ -128,11 +128,64 @@
     <i class="fa-solid fa-arrow-up"></i>
   </button>
 
+<footer>
+  <div class="container policy-section">
+    <h2 class="policy-title">Privacy Policy & Terms of Service</h2>
 
-  <!-- Footer -->
-  <footer class="bg-dark text-light text-center p-3 mt-5">
-    <p>© 2024 DM Technologies. All Rights Reserved.</p>
-  </footer>
+    <div class="accordion" id="policyAccordion">
+        <!-- Privacy Policy Section -->
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="privacyHeading">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#privacyCollapse" aria-expanded="true" aria-controls="privacyCollapse">
+                    Privacy Policy
+                </button>
+            </h2>
+            <div id="privacyCollapse" class="accordion-collapse collapse show" aria-labelledby="privacyHeading" data-bs-parent="#policyAccordion">
+                <div class="accordion-body">
+                    <p>Welcome to Maro Stores website. Your privacy is important to us. Since we do not collect personal information such as names, emails, or passwords, you can browse with confidence. </p>
+                    <p>We use affiliate links to recommend products, and these links may lead to third-party websites that have their own privacy policies. Please review those policies to understand how they collect and use your information.</p>
+                    <p>Our site may collect basic anonymous analytics data (e.g., number of visitors) to improve the user experience. However, no personally identifiable information (PII) is captured.</p>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Terms of Service Section -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="termsHeading">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#termsCollapse" aria-expanded="false" aria-controls="termsCollapse">
+                  Terms of Service
+              </button>
+          </h2>
+          <div id="termsCollapse" class="accordion-collapse collapse" aria-labelledby="termsHeading" data-bs-parent="#policyAccordion">
+              <div class="accordion-body">
+                  <p>By accessing this affiliate website, you agree to be bound by the following terms and conditions:</p>
+                  <ul>
+                      <li>You use this site at your own risk. We are not liable for any direct or indirect damages that may arise from the use of our affiliate links or products purchased through them.</li>
+                      <li>Product descriptions and prices are subject to change without notice. Please refer to the vendor's website for the latest details.</li>
+                      <li>We are not responsible for the availability or functionality of third-party websites linked from our site.</li>
+                      <li>Any dispute arising from the use of our site shall be governed by the laws applicable in Nigeria.</li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+
+<!-- social media icons -->
+
+<div class="social-icons">
+  <a href="https://www.facebook.com" target="_blank" class="social-icon">
+    <i class="fab fa-facebook-f"></i>
+  </a>
+  <a href="https://www.instagram.com" target="_blank" class="social-icon">
+    <i class="fab fa-instagram"></i>
+  </a>
+  
+</div>
+
+</footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
