--- a/products.html
+++ b/products.html
@@ -114,10 +114,23 @@
   </button>
 
 
-  <!-- Footer -->
-  <footer class="bg-dark text-light text-center p-3 mt-5">
-    <p>© 2024 DM Technologies. All Rights Reserved.</p>
-  </footer>
+   <!-- Footer -->
+<footer style="background-color: lightblue; color: white;" class="text-center p-3 mt-5">
+  <p>© 2024 DM Technologies. All Rights Reserved.</p>
+
+  <div class="social-icons">
+      <a href="https://www.facebook.com" target="_blank" class="social-icon">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://www.instagram.com" target="_blank" class="social-icon">
+        <i class="fab fa-instagram"></i>
+      </a>
+      
+    </div>
+</footer>
+
+
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="products.js"></script>
