--- a/index.html
+++ b/index.html
@@ -14,14 +14,8 @@
   <link rel="stylesheet" href="styles.css">
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16746031528"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-16746031528');
-</script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8327568277723275"
+  crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -185,13 +179,13 @@
             <div class="col-md-6 text-center text-md-end mt-5"> <!-- Added mt-5 -->
                 <h5>Follow Us</h5>
                 <div class="social-icons">
-                    <a href="https://facebook.com" target="_blank" class="text-white">
+                    <a href="#" target="_blank" class="text-white">
                         <i class="fab fa-facebook"></i>
                     </a>
-                    <a href="https://instagram.com" target="_blank" class="text-white">
+                    <a href="#" target="_blank" class="text-white">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://twitter.com" target="_blank" class="text-white">
+                    <a href="#" target="_blank" class="text-white">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </div>
