--- a/products_review.html
+++ b/products_review.html
@@ -13,14 +13,8 @@
     <title>Maro Stores</title>
 
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16746031528"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-16746031528');
-</script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8327568277723275"
+    crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -159,6 +153,8 @@
         <a href="https://www.instagram.com" target="_blank" class="social-icon">
           <i class="fab fa-instagram"></i>
         </a>
+        <!-- <a href="https://twitter.com" target="_blank" class="text-white">
+            <i class="fab fa-twitter"></i> -->
         
       </div>
 </footer>
