--- a/index.html
+++ b/index.html
@@ -114,8 +114,113 @@
           </div>
         </div>
       </div>
+
+      <!-- Product Card 4 -->
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-img-container">
+            <img src="https://m.media-amazon.com/images/I/81i2S1q+wDL._AC_SX679_.jpg" class="card-img-top img1" alt="Product Image 1">
+            <img src="https://m.media-amazon.com/images/I/81zhDSezeLL._AC_SX679_.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">GuruNanda Teeth Whitening</h5>
+            <p class="card-text">GuruNanda Teeth Whitening Strips -16 Day Treatments - Enamel-Safe Teeth Whitening for Sensitive Teeth, Non-Slip, Dry Strip Technology</p>
+            <button class="btn btn-primary" onclick="toggleImage(this)">Image One</button>
+            <a href="https://amzn.to/4f5AMe9" class="btn btn-success">Buy Now</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Product Card 5 -->
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-img-container">
+            <img src="https://m.media-amazon.com/images/I/61cWaLA-MdL._SX679_.jpg" class="card-img-top img1" alt="Product Image 1">
+            <img src="https://m.media-amazon.com/images/I/91FU-rE-XOL._SX679_.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Keranique Hair Mask</h5>
+            <p class="card-text">Keranique Hair Mask: Deep Repair & Hydration for Dry, Damaged Hair - Keratin Protein Boost for Fine Strands - Intense Moisturizer for Women</p>
+            <button class="btn btn-primary" onclick="toggleImage(this)">Image One</button>
+            <a href="https://amzn.to/40cFstL" class="btn btn-success">Buy Now</a>
+          </div>
+        </div>
+      </div>
+
+       <!-- Product Card 6 -->
+       <div class="col-md-4">
+        <div class="card">
+          <div class="card-img-container">
+            <img src="https://m.media-amazon.com/images/I/71KNG60InzL._SX679_.jpg" class="card-img-top img1" alt="Product Image 1">
+            <img src="https://m.media-amazon.com/images/I/81Erax5wn7L._SX679_.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">RoC Retinol Correxion</h5>
+            <p class="card-text">RoC Retinol Correxion Max Daily Hydration Anti-Aging Face Moisturizer with Hyaluronic Acid, 1.7 Fl Oz Skin Care Cream (Pack of 1)</p>
+            <button class="btn btn-primary" onclick="toggleImage(this)">Image One</button>
+            <a href="https://amzn.to/4ferrAh" class="btn btn-success">Buy Now</a>
+          </div>
+        </div>
+      </div>
+
+       <!-- Product Card  7-->
+       <div class="col-md-4">
+        <div class="card">
+          <div class="card-img-container">
+            <img src="https://m.media-amazon.com/images/I/51OWq0JeQDL._AC_SX679_.jpg" class="card-img-top img1" alt="Product Image 1">
+            <img src="https://m.media-amazon.com/images/I/61b6j4mDMPL._AC_SX679_.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">FENIFOX Bluetooth Mouse</h5>
+            <p class="card-text">FENIFOX Bluetooth Mouse Slim Mini Whisper-Quiet Flat Portable Wireless Mice Rechargeable Compatible with Laptop,PC,Tablet Android Windows XP(Black)</p>
+            <button class="btn btn-primary" onclick="toggleImage(this)">Image One</button>
+            <a href="https://amzn.to/3C3hDuk" class="btn btn-success">Buy Now</a>
+          </div>
+        </div>
+      </div>
+
+       <!-- Product Card  8-->
+       <div class="col-md-4">
+        <div class="card">
+          <div class="card-img-container">
+            <img src="https://m.media-amazon.com/images/I/71L42CoODhL._AC_SX679_.jpg" class="card-img-top img1" alt="Product Image 1">
+            <img src="https://m.media-amazon.com/images/I/71tufGGLkvL._AC_SX679_.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Baseus USB C to HDMI Adapter</h5>
+            <p class="card-text">Baseus USB C to HDMI Adapter, 4K@60Hz USB C Docking Station, 7 in 1 USB C Hub with 3 USB-A, PD 100W, TF/SD Card Reader, USB C Dock Compatible for iPhone 15/Mac/Dell/Acer/HP/ASUS/Steam Deck/Rog Ally</p>
+            <button class="btn btn-primary" onclick="toggleImage(this)">Image One</button>
+            <a href="https://amzn.to/3NvzRqS" class="btn btn-success">Buy Now</a>
+          </div>
+        </div>
+      </div>
+
+       <!-- Product Card  9-->
+       <div class="col-md-4">
+        <div class="card">
+          <div class="card-img-container">
+            <img src="https://m.media-amazon.com/images/I/61iPzD8F+sL._AC_SX679_.jpg" class="card-img-top img1" alt="Product Image 1">
+            <img src="https://m.media-amazon.com/images/I/61G6EINOzfL._AC_SX679_.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">iPhone 14 13 12 11 Fast Charger</h5>
+            <p class="card-text">iPhone 14 13 12 11 Fast Charger USB C Wall Charger [2-Pack] 6FT Fast Charging Cable Compatible with iPhone 14/14 Pro/14 Pro Max/iPhone 13/12/11/X/8/7/6/iPad Pro/Mini/AirPods</p>
+            <button class="btn btn-primary" onclick="toggleImage(this)">Image One</button>
+            <a href="https://amzn.to/4dRvLnR" class="btn btn-success">Buy Now</a>
+          </div>
+        </div>
+      </div>
+
+
+
+
     </div>
+
+     
   </section>
+
+  
+
 
    <!-- Scroll to Top Button -->
    <button id="scrollTopBtn">
