--- a/index.html
+++ b/index.html
@@ -210,6 +210,54 @@
           </div>
         </div>
       </div>
+      <!-- Product Card  10-->
+
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-img-container">
+            <img src="https://m.media-amazon.com/images/I/41+1Csr1pSL._AC_SX679_.jpg" class="card-img-top img1" alt="Product Image 1">
+            <img src="https://m.media-amazon.com/images/I/61V52s8z8eL._AC_SX679_.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">JBL Vibe Beam</h5>
+            <p class="card-text">JBL Vibe Beam - True Wireless JBL Deep Bass Sound Earbuds, Bluetooth 5.2, Water & Dust Resistant, Hands-free call with VoiceAware, Up to 32 hours of battery life (Black)</p>
+            <button class="btn btn-primary" onclick="toggleImage(this)">Image One</button>
+            <a href="https://amzn.to/3YuNLQn" class="btn btn-success">Buy Now</a>
+          </div>
+        </div>
+      </div>
+
+       <!-- Product Card  11-->
+       <div class="col-md-4">
+        <div class="card">
+          <div class="card-img-container">
+            <img src="https://m.media-amazon.com/images/I/51t0IE0zjaL._AC_SX679_.jpg" class="card-img-top img1" alt="Product Image 1">
+            <img src="https://m.media-amazon.com/images/I/71ei-AADVYL._AC_SX679_.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Beats Studio Pro</h5>
+            <p class="card-text">Beats Studio Pro - Wireless Bluetooth Noise Cancelling Headphones - Personalized Spatial Audio, USB-C Lossless Audio, Apple & Android Compatibility, Up to 40 Hours Battery Life - Sandstone</p>
+            <button class="btn btn-primary" onclick="toggleImage(this)">Image One</button>
+            <a href="https://amzn.to/3A6cXmY" class="btn btn-success">Buy Now</a>
+          </div>
+        </div>
+      </div>
+      <!-- Product Card  11-->
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-img-container">
+            <img src="https://m.media-amazon.com/images/I/41yzKby1BJL._AC_SX679_.jpg" class="card-img-top img1" alt="Product Image 1">
+            <img src="https://m.media-amazon.com/images/I/51lMjq915WL._AC_SX679_.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title"> Power Adapter</h5>
+            <p class="card-text">Sewell MOS Reach C Power Adapter with 60 W USB C Port + 3 USB A Ports (SW-42850-Family)</p>
+            <button class="btn btn-primary" onclick="toggleImage(this)">Image One</button>
+            <a href="https://amzn.to/4eSpABi" class="btn btn-success">Buy Now</a>
+          </div>
+        </div>
+      </div>
+      
 
 
 
