--- a/index.html
+++ b/index.html
@@ -257,14 +257,7 @@
           </div>
         </div>
       </div>
-      
-
-
-
-
     </div>
-
-     
   </section>
 
   
@@ -332,10 +325,10 @@
             <div class="col-md-6 text-center text-md-end mt-5"> <!-- Added mt-5 -->
                 <h5>Follow Us</h5>
                 <div class="social-icons">
-                    <a href="#" target="_blank" class="text-white">
+                    <a href="https://www.facebook.com/profile.php?id=61564901547112&mibextid=LQQJ4d" target="_blank" class="text-white">
                         <i class="fab fa-facebook"></i>
                     </a>
-                    <a href="#" target="_blank" class="text-white">
+                    <a href="https://www.instagram.com/maro_stores1/profilecard/?igsh=Mm1oem5wNGJmbTZn" target="_blank" class="text-white">
                         <i class="fab fa-instagram"></i>
                     </a>
                     <a href="#" target="_blank" class="text-white">
