--- a/index.html
+++ b/index.html
@@ -260,24 +260,16 @@
     </div>
   </section>
 
-  
-
-
    <!-- Scroll to Top Button -->
    <button id="scrollTopBtn">
     <i class="fa-solid fa-arrow-up"></i>
   </button>
 
-
-
-
-
-
+<!-- Privacy Policy and Terms Section -->
   <main>
     <div class="container my-5">
         <div class="row">
-            <!-- Privacy Policy and Terms Section -->
-            <div class="col-md-6 mt-5"> <!-- Added mt-5 -->
+            <div class="col-md-6 mt-5"> 
                 <h5>Privacy Policy & Terms of Service</h5>
                 <div class="accordion" id="policyAccordion">
                     <!-- Privacy Policy -->
@@ -348,13 +340,6 @@
       </div>
   </div>
 </footer>
-
-
-
-
-
-       
-
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
