--- a/products_review.html
+++ b/products_review.html
@@ -146,17 +146,24 @@
 <footer style="background-color: lightblue; color: white;" class="text-center p-3 mt-5">
     <p>© 2024 DM Technologies. All Rights Reserved.</p>
 
-    <div class="social-icons">
-        <a href="https://www.facebook.com" target="_blank" class="social-icon">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="https://www.instagram.com" target="_blank" class="social-icon">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <!-- <a href="https://twitter.com" target="_blank" class="text-white">
-            <i class="fab fa-twitter"></i> -->
+    <footer>
+        <div class="col-md-6 mt-5">
+            <h5>Follow Us</h5>
+            <div class="social-icons">
+                <a href="https://www.facebook.com/profile.php?id=61564901547112&mibextid=LQQJ4d" target="_blank">
+                    <i class="fab fa-facebook"></i>
+                </a>
+                <a href="https://www.instagram.com/maro_stores1/profilecard/?igsh=Mm1oem5wNGJmbTZn" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="#" target="_blank">
+                    <i class="fab fa-twitter"></i>
+                </a>
+            </div>
+        </div>
         
-      </div>
+    </footer>
+    
 </footer>
 
 
