--- a/products.html
+++ b/products.html
@@ -178,25 +178,25 @@
   </button>
 
    <!-- Footer section -->
-<footer style="background-color: lightblue; color: white;" class="text-center p-3 mt-5">
-  <p>© 2024 DM Technologies. All Rights Reserved.</p>
-
-<!-- social icons section -->
+ <!-- Footer -->
+ <footer style="background-color: lightblue; color: white;" class="text-center p-3 mt-5">
+    
+    
   <div class="col-md-6 mt-5">
-    <h5>Follow Us</h5>
-    <div class="social-icons">
-        <a href="https://www.facebook.com/profile.php?id=61564901547112&mibextid=LQQJ4d" target="_blank">
-            <i class="fab fa-facebook"></i>
-        </a>
-        <a href="https://www.instagram.com/maro_stores1/profilecard/?igsh=Mm1oem5wNGJmbTZn" target="_blank">
-            <i class="fab fa-instagram"></i>
-        </a>
-        <a href="#" target="_blank">
-            <i class="fab fa-twitter"></i>
-        </a>
-    </div>
-</div>
-</footer>
+      <h5>Follow Us</h5>
+      <div class="social-icons">
+          <a href="https://www.facebook.com/profile.php?id=61564901547112&mibextid=LQQJ4d" target="_blank">
+              <i class="fab fa-facebook"></i>
+          </a>
+          <a href="https://www.instagram.com/maro_stores1/profilecard/?igsh=Mm1oem5wNGJmbTZn" target="_blank">
+              <i class="fab fa-instagram"></i>
+          </a>
+          <a href="#" target="_blank">
+              <i class="fab fa-twitter"></i>
+          </a>
+      </div>
+      <p>© 2024 DM Technologies. All Rights Reserved.</p>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="products.js"></script>
 </body>
