--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   
   <link rel="stylesheet" href="styles.css">
 
+  <!-- Google tracking code tag -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-23SJ94WE3V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-23SJ94WE3V');
+</script>
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8327568277723275"
   crossorigin="anonymous"></script>
