--- a/products_review.html
+++ b/products_review.html
@@ -8,9 +8,18 @@
     <link rel="stylesheet" href="products_review.css"> 
 
     <!-- font awesome cdn -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  
-    <title>Maro Stores</title>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+   <title>Maro Stores</title>
+   
+   <!-- Google tracking code -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-23SJ94WE3V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-23SJ94WE3V');
+</script>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8327568277723275"
