--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Maro Stores</title>
   <link rel="stylesheet" href="contact.css">
-  <link rel="icon" type="image/png" sizes="64x64" href="./img/tlogo.png">
+
+   <!-- favicon image -->
+   <link rel="icon" type="image/png" sizes="64x64" href="./img/mslogo.jpg">
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <!-- Google tracking code -->
    <!-- Google tag (gtag.js) -->
