--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <link rel="icon" type="image/png" sizes="64x64" href="./img/tlogo.png">
+   <!-- favicon image -->
+  <link rel="icon" type="image/png" sizes="64x64" href="./img/mslogo.jpg">
+  
   <!-- font awesome cdn -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   
@@ -50,7 +52,6 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
-          
         </ul>
       </div>
     </div>
