--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
    <!-- favicon image -->
   <link rel="icon" type="image/png" sizes="64x64" href="./img/mslogo.jpg">
-  
+
   <!-- font awesome cdn -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   
@@ -51,6 +51,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About Us</a>
           </li>
         </ul>
       </div>
