--- a/products.html
+++ b/products.html
@@ -9,7 +9,6 @@
    <link rel="icon" type="image/png" sizes="64x64" href="./img/mslogo.jpg">
   
    <!-- bootstrap cdn -->
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="products.css">
 
@@ -45,6 +44,8 @@
           <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
           <li class="nav-item"><a class="nav-link" href="products_review.html">Products review</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+          
         </ul>
       </div>
     </div>
