--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="products.html">Products</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="products_review.html">Products review</a>
+                <a class="nav-link" href="products_review.html">Products Review</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
