--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
       <div class="col-md-4">
         <div class="card">
           <div class="card-img-container">
-            <img src="https://m.media-amazon.com/images/I/51nhDFywuyL._MCnd_AC_.jpg" class="card-img-top img1" alt="Product Image 1">
-            <img src="https://m.media-amazon.com/images/I/71ymt2HSJXL._AC_SX679_.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
+            <img src="https://m.media-amazon.com/images/I/91eKceZTvDL._AC_SX679_.jpg" class="card-img-top img1" alt="Product Image 1">
+            <img src="https://m.media-amazon.com/images/I/81ZbyheFZUL._AC_SX679_.jpg" class="card-img-top img2 d-none" alt="Product Image 2">
           </div>
           <div class="card-body">
-            <h5 class="card-title">Portable Bluetooth</h5>
-            <p class="card-text">Portable Bluetooth Karaoke Speaker with 2 Wireless Microphones & LED Lights for Kids Birthday Parties</p>
+            <h5 class="card-title">Small Wallet for Women</h5>
+            <p class="card-text">Small Wallet for Women Bifold RFID Blocking Card Holder Leather Wallets with Zipper Coin Pocket</p>
             <button class="btn btn-primary" onclick="toggleImage(this)">Image One</button>
-            <a href="https://amzn.to/3BMSQef" class="btn btn-success">Buy Now</a>
+            <a href="https://amzn.to/3YkDdlI" class="btn btn-success">Buy Now</a>
           </div>
         </div>
       </div>
